--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* DEFAULT CSS START */
 .App {
   text-align: center;
 }
@@ -36,3 +37,5 @@
     transform: rotate(360deg);
   }
 }
+
+/* DEFAULT CSS END */
