--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* DEFAULT CSS START*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +13,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* DEFAULT CSS END */
+
+
