--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,18 @@
 }
 
 /* DEFAULT CSS END */
+
+
+/* Colour */
+
+.ant-layout-header{
+  background: #002766 !important
+}
+
+.ant-layout-sider {
+  background: #002766 !important
+}
+
+.ant-layout-content{
+  height: calc(100vh - 64px) !important
+}
